--- a/test.html
+++ b/test.html
@@ -7,21 +7,22 @@
 <script>
 const canvas = document.getElementById("myCanvas");
 const ctx = canvas.getContext("2d");
-canvas.height = canvas.width;
-ctx.transform(1, 0, 0, -1, 0, canvas.height)
-
-const xArray = [50,60,70,67,876,45,98,56,89,45,89,45,90];
-
-const yArray = [7,8,8,9,9,9,10,11,14,14,15,16,17,18,19,20];
 
 ctx.fillStyle = "red";
-for (let i = 0; i < xArray.length-1; i++) {
-  let x = xArray[i]*400/150;
-  let y = yArray[i]*400/15;
-  ctx.beginPath();
-  ctx.ellipse(x, y, 3, 3, 0, 0, Math.PI * 2);
-  ctx.fill();
-}
+ctx.beginPath();
+
+// Move to the starting point
+ctx.moveTo(200, 200);
+
+// Left side curve (using Bézier curve)
+ctx.bezierCurveTo(150, 100, 100, 150, 200, 250);
+
+// Right side curve (using Bézier curve)
+ctx.bezierCurveTo(300, 150, 250, 100, 200, 200);
+
+ctx.closePath();
+ctx.fill();
+
 </script>
 
 </body>
