--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@ ctx.transform(1, 0, 0, -1, 0, canvas.height)
 
 const xArray = [50,60,70,67,876,45,98,56,89,45,89,45,90];
 
-const yArray = [7,8,8,9,9,9,10,11,14,14,15,16,17,18,19,20];
+const yArray = [7,8,8,9,9,9,10,11,14,14,15,16,17,18,19,];
 
 ctx.fillStyle = "red";
 for (let i = 0; i < xArray.length-1; i++) {
